2008-09-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/close.py (CloseAgent._close_all_pages): Take a copy
	of self.pages to pass to _confirm_and_close_pages.

	* gaupol/gtk/dialogs/multiclose.py (MultiCloseDialog.__init__): Take a
	copy of the pages argument and assign that to self.pages.

	Fixes #552129.

2008-09-03  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/tags/subrip.py (SubRip.clean): Remove tags immeadiately closed
	after opening or vice versa.

2008-08-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py: Make py2exe includes and packages be lists instead of
	tuples to actually be able to build the exe.

2008-08-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py: Bump version number.

	RELEASE 0.13

2008-08-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/search.py (SearchAgent.set_search_string): Don't set
	non-existent finder attribute 'is_regex'.

	* gaupol/gtk/page.py (Page._update_undo_levels): Set the correct
	project attribute for undo limit.

2008-08-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/contractual.py (Contractual.__new__): Delete entire method if
	gaupol.debug is False.

	* gaupol/deco.py (contractual): Return unaltered function if
	gaupol.debug is False.

2008-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec (preview.force_utf_8): Add option.

	* data/glade/dialogs/preferences.glade:
	* gaupol/gtk/dialogs/preferences.py:
	Add force UTF-8 check box.

	* gaupol/agents/preview.py (PreviewAgent.get_temp_file_path)
	(PreviewAgent.preview): Add optional 'encoding' keyword argument.

	* gaupol/gtk/agents/preview.py (PreviewAgent.preview): Set encoding
	argument for preview to 'utf_8' if force_utf_8 is True.

	* gaupol/gtk/util.py (get_preview_command): New function.

	* gaupol/players.py: Add attribute 'command_utf_8'.

2008-08-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py (debug): Rename from 'check_contracts' now that it