@@ -3,6 +3,7 @@ Gaupol 0.13.1
 
  * Fix error saving subtitle files when trying to quit with unsaved
    changes in multiple documents (#552129)
+ * All all open projects as a target to the position shift dialog
  * Remove redundant tags with the SubRip format when doing automatic
    text corrections, e.g. removing hearing impaired texts
 
